  argument that denotes which storage variable the result should be written to.
- Tags objects in scripts have new getter methods: numResources & resources.
- The Script Editor has a basic autocomplete functionality that suggests
  words based on language keywords, registered types and words already
  present in all scripts.

Fixed Bugs:
- Fixed a crash when removing a resource with tags.
- Fixed a crash when loading an image and giving an invalid project-id.
- Fix for potential crash on closing the app while in the editor.
- Fixed storing values from showInput into storage. It works now as intended.

=================
Version 1.4.0.0
=================

Fixed Bugs:
- Fixed Node changes not generating an undo entry on the undo stack.
- Fixed a crash in the help overlay, when highlighted widgets are 
  deleted before the overlay can show.
- Fixed a bug that prevented projects from being saved, when a rename was requested
  but the folder failed to rename.
- Fixed a crash when loading scene nodes which are not linked to a scene because of
  faulty project configuration.
- Fixed a few bugs with updating the script list and the ui for the selected scripts.
- Fixed QML binding loop for buttons.
- Fixed adding tags to resources. Now they actually work as intended.

New Features:
- Added the possibility to configure the Layout of the Player for the project as a whole.
- Created an Auto-Updater for Windows.
- Added the ability to configure the predominantly used hand. This is taken into 
  account in the default Player Layouts.
- Added a new in-built Layout that wastes less screen real estate.
- Added the possibility to connect to sex toys and issue commands to sex toys in a tease.
  - Added a Buttplug.io device client to connect to toys via Initface.
- Added an event communication mechanism to the script interface via the PlayerEventCommunicator.
  This lets a Script communicate and exchange data with the Layout.