@@ -7,8 +7,6 @@ Qt by "The Qt Company" (https://www.qt.io)
 
 3rd Party Libraries:
 better-enums by "aantron" (https://github.com/aantron/better-enums)
-Buttplug Rust - FFI by "qDot" (https://github.com/buttplugio/buttplug-rs-ffi)
-ButplugCpp by "OpenFunscripter" extended by "RemotelyChaotic" (https://github.com/OpenFunscripter/ButtplugCPP)
 dylib by "martin-olivier" (https://github.com/martin-olivier/dylib)
 Initface Engine by "qDot" (https://github.com/intiface/intiface-engine)
 Json for Modern C++ by "nlohmann" (https://github.com/nlohmann/json)
@@ -18,7 +16,7 @@ KDE syntax-highlighting (https://github.com/KDE/syntax-highlighting)
 Libzip by Dieter Baron and Thomas Klausner (https://libzip.org/)
 Lua 5.4.4 (https://www.lua.org/)
 Lua JSON Library by "Tyler Neylon" (https://gist.github.com/tylerneylon/59f4bcf316be525b30ab)
-Protobuf by "Google Inc." (https://protobuf.dev/)
+QButtplug by "RemotlyChaotic" (https://github.com/RemotelyChaotic/QButtplug)
 QtLua (http://www.nongnu.org/libqtlua/)
 QtLua modifications by "Li, Kwue-Ron" (https://github.com/likwueron/libqtlua_fork)
 MRichTextEditor by "Anchakor" (https://github.com/Anchakor/MRichTextEditor)
